move helm chart

--- a/helm/eventhub-metrics/values.yaml
+++ b/helm/eventhub-metrics/values.yaml
@@ -3,8 +3,9 @@
 ####################################
 
 image:
-  repository: tbd
-  group: tbd
+  repository: docker.io
+  group: deviceinsight
+  version: latest
   pullPolicy: IfNotPresent
 
 resources: {}
