--- a/helm/eventhub-metrics/templates/role.yaml
+++ b/helm/eventhub-metrics/templates/role.yaml
@@ -1,3 +1,4 @@
+{{- if not (hasKey .Values "serviceAccountName") }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -18,3 +19,4 @@ rules:
       - configmaps
     verbs:
       - '*'
+{{- end }}
