--- a/helm/eventhub-metrics/templates/rolebinding.yaml
+++ b/helm/eventhub-metrics/templates/rolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if not (hasKey .Values "serviceAccountName") }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -18,3 +19,4 @@ roleRef:
   kind: Role
   name: {{ template "eventhub-metrics.fullname" . }}
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
