--- a/helm/eventhub-metrics/templates/serviceaccount.yaml
+++ b/helm/eventhub-metrics/templates/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if not (hasKey .Values "serviceAccountName") }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -6,3 +7,4 @@ metadata:
     azure.workload.identity/use: "true"
   annotations:
     azure.workload.identity/client-id: {{ .Values.managedIdentity.clientId }}
+{{- end }}
