--- a/helm/archives/index.yaml
+++ b/helm/archives/index.yaml
@@ -2,7 +2,19 @@ apiVersion: v1
 entries:
   eventhub-metrics:
   - apiVersion: v2
-    created: "2025-01-28T12:14:18.401219693+01:00"
+    created: "2026-01-02T11:39:43.38691604+01:00"
+    description: A Helm chart installing eventhub-metrics
+    digest: 760c3cff835e4ee8e73ee269a23267131514b1e15a255a712b4a109649296df1
+    home: https://gitlab.device-insight.com/dwi/eventhub-metrics
+    maintainers:
+    - name: Device Insight
+      url: https://www.device-insight.com
+    name: eventhub-metrics
+    urls:
+    - eventhub-metrics-1.4.0.tgz
+    version: 1.4.0
+  - apiVersion: v2
+    created: "2026-01-02T11:39:43.386382312+01:00"
     description: A Helm chart installing eventhub-metrics
     digest: 7a773325dfff1ff7df65d53a7d35789db278147494ede02462bd3d88bb2a548e
     home: https://gitlab.device-insight.com/dwi/eventhub-metrics
@@ -14,7 +26,7 @@ entries:
     - eventhub-metrics-1.3.0.tgz
     version: 1.3.0
   - apiVersion: v2
-    created: "2025-01-28T12:14:18.400846019+01:00"
+    created: "2026-01-02T11:39:43.385963428+01:00"
     description: A Helm chart installing eventhub-metrics
     digest: 6c21dda34634bc06c7f99223cd228cdb22aba541efe0ab41390aea2b161d2617
     home: https://gitlab.device-insight.com/dwi/eventhub-metrics
@@ -26,7 +38,7 @@ entries:
     - eventhub-metrics-1.2.0.tgz
     version: 1.2.0
   - apiVersion: v2
-    created: "2025-01-28T12:14:18.400368213+01:00"
+    created: "2026-01-02T11:39:43.385522403+01:00"
     description: A Helm chart installing eventhub-metrics
     digest: 9002cbf09b24c0e2c3d30c43659abf284a22b849bc196e9c1e1e6ae834201c49
     home: https://gitlab.device-insight.com/dwi/eventhub-metrics
@@ -38,7 +50,7 @@ entries:
     - eventhub-metrics-1.1.0.tgz
     version: 1.1.0
   - apiVersion: v2
-    created: "2025-01-28T12:14:18.399880749+01:00"
+    created: "2026-01-02T11:39:43.385108298+01:00"
     description: A Helm chart installing eventhub-metrics
     digest: 040a2773b45371e9230ca4339b03b5ed45078afed99d953af95d698ddb544bf0
     home: https://gitlab.device-insight.com/dwi/eventhub-metrics
@@ -49,4 +61,4 @@ entries:
     urls:
     - eventhub-metrics-1.0.0.tgz
     version: 1.0.0
-generated: "2025-01-28T12:14:18.399254756+01:00"
+generated: "2026-01-02T11:39:43.384449897+01:00"
